Mercado pago states

--- a/frontend/failure.html
+++ b/frontend/failure.html
@@ -1,3 +1,18 @@
-<h1>❌ Error en el pago</h1>
-<p>Hubo un problema con la transacción.</p>
-<a href="checkout.html">Intentar nuevamente</a>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Error en el pago</title>
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+  <main>
+    <h1>❌ Error en el pago</h1>
+    <p>Hubo un problema con la transacción.</p>
+
+    <a href="checkout.html">Intentar nuevamente</a>
+    <br><br>
+    <a href="index.html">Volver a la librería</a>
+  </main>
+</body>
+</html>
