--- a/frontend/pending.html
+++ b/frontend/pending.html
@@ -1,3 +1,16 @@
-<h1>⌛ Pago pendiente</h1>
-<p>Tu pago está siendo procesado. Te avisaremos pronto.</p>
-<a href="index.html">Volver al inicio</a>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Pago pendiente</title>
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+  <main>
+    <h1>⌛ Pago pendiente</h1>
+    <p>Tu pago está siendo procesado. Te avisaremos pronto.</p>
+
+    <a href="index.html">Volver al inicio</a>
+  </main>
+</body>
+</html>
